--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,17 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1"
+    "passport-cookie": "^1.0.9",
+    "passport-jwt": "^4.0.1",
+    "uuid": "^11.0.3"
   }
 }
