--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.21.6",
     "axios": "^1.7.8",
     "chart.js": "^4.4.6",
+    "framer-motion": "^11.13.1",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
